[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assests/SCRIPTS/Moeda.gd" type="Script" id=1]
[ext_resource path="res://Assests/MOEDAS 2/Moedas1.png" type="Texture" id=2]
[ext_resource path="res://Assests/MOEDAS 2/Moedas2.png" type="Texture" id=3]
[ext_resource path="res://Assests/MOEDAS 2/Moedas3.png" type="Texture" id=4]
[ext_resource path="res://Assests/MOEDAS 2/Moedas4.png" type="Texture" id=5]
[ext_resource path="res://Assests/MOEDAS 2/Moedas5.png" type="Texture" id=6]
[ext_resource path="res://Assests/MOEDAS 2/Moedas6.png" type="Texture" id=7]
[ext_resource path="res://Assests/MOEDAS 2/Moedas7.png" type="Texture" id=8]
[ext_resource path="res://Assests/MOEDAS 2/Moedas8.png" type="Texture" id=9]
[ext_resource path="res://Assests/MOEDAS 2/Moedas9.png" type="Texture" id=10]
[ext_resource path="res://Assests/SONS/coin_SFX.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Ide",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 904.36

[node name="Moeda" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 34.4767, 33.1227 )
frames = SubResource( 1 )
animation = "Ide"
frame = 8
playing = true

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 34.4767, 33.1227 )
scale = Vector2( 0.03, 0.03 )
shape = SubResource( 2 )

[node name="SoundCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.451
[connection signal="body_entered" from="." to="." method="_on_Moeda_body_entered"]
[connection signal="finished" from="SoundCoin" to="." method="_on_SoundCoin_finished"]
